--- a/d20.html
+++ b/d20.html
@@ -201,6 +201,7 @@
   function testa(po, pe, di) {
     if (isNaN(po) || isNaN(pe) || isNaN(di)) return;
     const value = Math.floor((po / 100 * 20) + pe);
+    if (value > 20) console.error(`O VdH é maior que o coberto pela tabela: ${value}`);
     const skill = table[`${value}`];
     const inner = resul(value, skill, di);
     const array = [po, pe, value, di, color(inner)];
