--- a/d20.html
+++ b/d20.html
@@ -193,7 +193,6 @@
     e.preventDefault();
     const por = parseInt(porc.value);
     const per = parseInt(peri.value);
-    if (por === 0 && per === 0) return;
     const mod = mode.value;
     const dic = (mod === 'auto') ? diceRoll() : parseInt(dice.value);
     testa(por, per, dic);
@@ -202,8 +201,9 @@
   });
   function testa(po, pe, di) {
     if (isNaN(po) || isNaN(pe) || isNaN(di)) return;
-    const value = (po > 0) ? Math.floor((po / 100 * 20) + pe) : pe;
+    let value = (po / 100 * 20) + pe;
     if (value > 20) console.error(`O VdH é maior que o coberto pela tabela: ${value}`);
+    if (value <= 0) valor = 1;
     const skill = table[`${value}`];
     const inner = resul(value, skill, di);
     const array = [po, pe, value, di, color(inner)];
