--- a/d20.html
+++ b/d20.html
@@ -112,6 +112,7 @@
   }
 </style>
 <body>
+  <!-- D20 gif by https://hedronrockworks.com/pricing -->
   <img src="d20.gif" alt="">
   <form name="form" autocomplete="off">
     <fieldset>
