--- a/d20.html
+++ b/d20.html
@@ -101,27 +101,28 @@
     z-index: -1;
   }
   table#mms {
+    background: #000;
     border: 1px solid #fff;
-    position: absolute;
-    left: 2.5vw;
     border-collapse: separate;
     border-spacing: 2px;
-    display: flex;
+    position: absolute;
+    left: 2.5vw;
+    /* display: flex;
     align-items: center;
     transition: 1s;
   }
   table#mms tbody {
     background: #000;
-    z-index: 10;
+    z-index: 10; */
   }
   table#mms td {
-    width: 7vw;
+    width: 7.25vw;
     border: 1px solid #fff;
     text-align: center;
     vertical-align: middle;
     line-height: 1.5rem;
   }
-  button#hide {
+  /* button#hide {
     z-index: 0;
     position: absolute;
     right: -3%;
@@ -135,7 +136,7 @@
   button#hide:hover {
     color: #fff;
     transform: translateX(35%);
-  }
+  } */
 </style>
 <body>
   <!-- D20 gif by https://hedronrockworks.com/pricing -->
@@ -288,7 +289,7 @@
         cell.innerHTML = z(table[`${i}`][j]);
       }
     }
-    mms.innerHTML += '<button id="hide" onclick="hide(this)"> <<</button>';
+    // mms.innerHTML += '<button id="hide" onclick="hide(this)"> <<</button>';
   }
   function mmsColor(mms, vdh) {
     Array.prototype.slice.call(mms.rows).forEach((r, i) => {
@@ -315,11 +316,11 @@
   document.querySelector('#result').onclick = () => {
     clear();
   }
-  function hide(that) {
-    let inner = that.innerHTML;
-    let tran = maquina_mortifera.style.transform;
-    that.innerHTML = (inner === ' &lt;&lt;') ? ' >>' : ' <<';
-    maquina_mortifera.style.transform = (tran === '') ? 'translateX(-31.25vw)' : '';
-  };
+  // function hide(that) {
+  //   let inner = that.innerHTML;
+  //   let tran = maquina_mortifera.style.transform;
+  //   that.innerHTML = (inner === ' &lt;&lt;') ? ' >>' : ' <<';
+  //   maquina_mortifera.style.transform = (tran === '') ? 'translateX(-31.25vw)' : '';
+  // };
 </script>
 </html>
