--- a/d20.html
+++ b/d20.html
@@ -258,6 +258,7 @@
     for (const i in output) {
       output[i].innerHTML = arr[i];
     }
+    console.log(arr);
   }
   function diceRoll() {
     return Math.ceil(Math.random() * 20);
